--- a/src/Product.css
+++ b/src/Product.css
@@ -1,15 +1,49 @@
-/* src/ProductList.css */
-.product {
+/* src/Product.css */
+.product-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+  }
+  
+  .product {
     border: 1px solid #ddd;
     padding: 10px;
-    width: 200px;
+    width: calc(33.333% - 40px); /* Subtracting the gap between cards */
+    box-sizing: border-box;
     text-align: center;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 350px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
   }
   
   .product-image {
     width: 100%;
     height: auto;
+    max-height: 150px;
+    object-fit: cover;
+    border-radius: 5px;
+  }
+  
+  .product-info {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  .product h3 {
+    margin: 10px 0 5px;
+    font-size: 18px;
+  }
+  
+  .product p {
+    font-size: 14px;
+    color: #555;
   }
   
   button {
@@ -19,10 +53,7 @@
     color: white;
     border: none;
     cursor: pointer;
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
+    border-radius: 5px;
   }
   
   button:hover {
